--- a/Part_1.ipynb
+++ b/Part_1.ipynb
@@ -1,8 +1,18 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/nogapazz/ADV_DL_Project/blob/main/Part_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "bb98aee3-43e3-46c6-af0f-3a2c041d79a9",
       "metadata": {
         "id": "bb98aee3-43e3-46c6-af0f-3a2c041d79a9"
@@ -44,7 +54,7 @@
         "outputId": "0419a6ce-cf8e-4bef-f57c-ce2272fcd284"
       },
       "id": "0Hhxt9e0bQnY",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,7 +90,7 @@
         "outputId": "83e7e505-1358-4b35-b6aa-312f1f097b16"
       },
       "id": "U3CBm-omb-5X",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -387,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "108101e3-edb2-466e-b3ef-90effc8492c1",
       "metadata": {
         "id": "108101e3-edb2-466e-b3ef-90effc8492c1"
@@ -422,7 +432,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "8feb59f5-58fd-4ad1-b5ed-9878597568b6",
       "metadata": {
         "id": "8feb59f5-58fd-4ad1-b5ed-9878597568b6"
@@ -446,7 +456,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "108eeec6-96e9-4d4d-9b89-9d70326a6d39",
       "metadata": {
         "colab": {
@@ -474,7 +484,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "917e0caf-965e-4fe2-981f-36c831f04802",
       "metadata": {
         "colab": {
@@ -565,7 +575,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "e341ffef-f5d2-4b21-8e2f-4f92da511680",
       "metadata": {
         "colab": {
@@ -709,7 +719,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "858c8a77-655a-4fd1-9364-aa522bf568e6",
       "metadata": {
         "colab": {
@@ -1099,7 +1109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "cbc70dc5-8142-4aa5-8562-c1cdeaf0cdcb",
       "metadata": {
         "id": "cbc70dc5-8142-4aa5-8562-c1cdeaf0cdcb"
@@ -1127,7 +1137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "71ba430b-6aaf-4c9e-8b10-d1e31b7ccab0",
       "metadata": {
         "colab": {
@@ -1182,7 +1192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "eca69da1-20e1-488b-9941-649bff87cd52",
       "metadata": {
         "colab": {
@@ -1289,7 +1299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "8d61bdf6-9fa6-4078-a6a0-8df25b23f760",
       "metadata": {
         "colab": {
@@ -1383,7 +1393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "6c01676b-5a2c-49bc-b394-eb7b6f4762d2",
       "metadata": {
         "colab": {
@@ -1799,7 +1809,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "16363ca7-f6a3-4584-83b9-f9e6ecff9aa0",
       "metadata": {
         "colab": {
@@ -1857,7 +1867,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "a436e129-69fe-4fdc-81ec-4ca0548d2207",
       "metadata": {
         "colab": {
@@ -1920,7 +1930,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "7bbef1ba-3db6-4b4c-b769-b4794e5ed1e4",
       "metadata": {
         "colab": {
@@ -2914,7 +2924,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "5402250c-5716-488e-9841-a1ba2f62debd",
       "metadata": {
         "colab": {
@@ -4392,7 +4402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "27a60c61-61ff-49b7-9402-7f016a5bb71b",
       "metadata": {
         "colab": {
@@ -4804,7 +4814,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "e3c66824-9a6a-477f-afcf-381bc609cc74",
       "metadata": {
         "colab": {
@@ -5211,7 +5221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "id": "a6ee4d6f-7d72-44c3-8524-cbcc1b5372a8",
       "metadata": {
         "colab": {
@@ -5366,7 +5376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "id": "9e107215-8a73-411a-bfd0-3050bdec907a",
       "metadata": {
         "id": "9e107215-8a73-411a-bfd0-3050bdec907a"
@@ -5448,7 +5458,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "7f7ada5b-4c7d-4fba-aeeb-f8f8896d7741",
       "metadata": {
         "colab": {
@@ -6549,7 +6559,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "id": "a63b17fa-1fe6-4594-b7ea-59a4b17b1057",
       "metadata": {
         "colab": {
@@ -6590,7 +6600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "id": "dd108dd0-024b-422a-a465-7bdeeb8328b5",
       "metadata": {
         "colab": {
@@ -7058,7 +7068,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "id": "3386db53-c2a0-480a-bd06-d0777fccb8e3",
       "metadata": {
         "colab": {
@@ -7119,7 +7129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "id": "c17225d9-3825-4a3b-b656-f46c62ee7371",
       "metadata": {
         "colab": {
@@ -7526,7 +7536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "id": "8c16ff1b-6be6-4e51-9cb4-8744baec3577",
       "metadata": {
         "id": "8c16ff1b-6be6-4e51-9cb4-8744baec3577"
@@ -7553,7 +7563,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "id": "3d4eb6b6-1e14-44b7-9e70-d2126bcf2390",
       "metadata": {
         "colab": {
@@ -8031,7 +8041,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "id": "e6917548-b535-429c-bbe6-52d43565646a",
       "metadata": {
         "colab": {
@@ -8135,7 +8145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "id": "4439f7d7-d184-4e67-a87e-5273143b5681",
       "metadata": {
         "id": "4439f7d7-d184-4e67-a87e-5273143b5681"
@@ -8151,7 +8161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "id": "6728b17e-4d93-4a79-a5ab-38a048900723",
       "metadata": {
         "colab": {
@@ -8239,7 +8249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "id": "e5d490fb-1626-4138-9c56-21063a504f3b",
       "metadata": {
         "id": "e5d490fb-1626-4138-9c56-21063a504f3b"
@@ -8268,7 +8278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "id": "b04b1f6c-c530-4088-a4c7-0729efb5da99",
       "metadata": {
         "colab": {
@@ -8345,7 +8355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "id": "74899d11-db46-44a2-9944-07c67b3b04d5",
       "metadata": {
         "id": "74899d11-db46-44a2-9944-07c67b3b04d5"
@@ -8359,7 +8369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "id": "9eec8913-16d5-434c-b59f-767b2591d4b4",
       "metadata": {
         "id": "9eec8913-16d5-434c-b59f-767b2591d4b4"
@@ -8391,7 +8401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "id": "d117841a-b3f4-4cc2-9242-d216178c89a9",
       "metadata": {
         "id": "d117841a-b3f4-4cc2-9242-d216178c89a9"
@@ -8423,7 +8433,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "id": "184a53bc-10db-4053-a908-24dbf56b6f49",
       "metadata": {
         "colab": {
@@ -8519,7 +8529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "id": "8804de2e-33c1-4bbc-b4ee-f22d72323fc2",
       "metadata": {
         "id": "8804de2e-33c1-4bbc-b4ee-f22d72323fc2"
@@ -8549,7 +8559,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "id": "610244af-1408-41fc-9755-78ccd135031a",
       "metadata": {
         "colab": {
@@ -8614,7 +8624,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "id": "642394c8-d7ec-4d55-ac36-a9197e19ca52",
       "metadata": {
         "id": "642394c8-d7ec-4d55-ac36-a9197e19ca52"
@@ -8627,7 +8637,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "id": "7498333b-72e2-46d5-995d-2c0bf2cf3d17",
       "metadata": {
         "id": "7498333b-72e2-46d5-995d-2c0bf2cf3d17"
@@ -8655,7 +8665,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "id": "95d3fc7a-f709-43bf-8c85-a06a45761941",
       "metadata": {
         "colab": {
@@ -8720,7 +8730,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "id": "2dca7ab2-95fc-4240-a090-5c2b7c9622be",
       "metadata": {
         "id": "2dca7ab2-95fc-4240-a090-5c2b7c9622be"
@@ -8733,7 +8743,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "id": "25880404-0ed3-4c24-9404-51d404039649",
       "metadata": {
         "id": "25880404-0ed3-4c24-9404-51d404039649"
@@ -8759,7 +8769,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "id": "ac71432c-a560-421c-b688-152c94b771ca",
       "metadata": {
         "colab": {
@@ -8853,7 +8863,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "id": "d137df42-7aee-41bb-ac09-1dd830467e3c",
       "metadata": {
         "colab": {
@@ -8887,7 +8897,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "id": "c67234e8-945c-4e79-8fce-1a408f26d27d",
       "metadata": {
         "id": "c67234e8-945c-4e79-8fce-1a408f26d27d"
@@ -8915,7 +8925,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "id": "a0309249-3b5f-48d5-88c6-1ebebd3cd984",
       "metadata": {
         "colab": {
@@ -8995,7 +9005,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "id": "3dc234ca-00cd-4fff-bc41-41009b4dc442",
       "metadata": {
         "colab": {
@@ -9437,7 +9447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "id": "2cd78e27-4f4f-45fa-9592-f926b8d03670",
       "metadata": {
         "colab": {
@@ -9506,7 +9516,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "id": "3fadd98b-0e2f-437f-9982-ece9685b4bb1",
       "metadata": {
         "colab": {
@@ -9942,7 +9952,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "id": "320d4a8a-9322-4bd0-8e73-962ca8b82256",
       "metadata": {
         "id": "320d4a8a-9322-4bd0-8e73-962ca8b82256"
@@ -9960,7 +9970,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "id": "ab786e24-ad55-4ac5-a8ed-ea521c608217",
       "metadata": {
         "colab": {
@@ -10272,7 +10282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "id": "70e7a1df-e7d8-4abd-8375-92edfa88c019",
       "metadata": {
         "id": "70e7a1df-e7d8-4abd-8375-92edfa88c019"
@@ -10298,7 +10308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "id": "cf927fc5-8f8c-4c14-a490-e8586f0ec2eb",
       "metadata": {
         "id": "cf927fc5-8f8c-4c14-a490-e8586f0ec2eb"
@@ -10314,7 +10324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "id": "d97b7be1-e8fb-4f15-9965-9d28182a33ab",
       "metadata": {
         "colab": {
@@ -10445,7 +10455,8 @@
       "version": "3.12.0"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
